--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" href="https://www.citypng.com/public/uploads/preview/-11596400565qsuxfwyv9j.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://shop-save.co.in/assets/img/login.png" type="image/x-icon">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Amazon Clone</title>
+    <title>SHOP AND SAVE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
